Changelog for driftnet

1.0.1

    Add radiotap and 802.11 headers support

1.0

    Add ipv6 support
      Based on work of Sebastien Decugis.
      See https://bugs.launchpad.net/ubuntu/+source/driftnet/+bug/16279

    Update TODO file

    Update manual

    Deal better with libpng errors

    Fix memstr() implementation non-working on 64bit systems.
      Taken from: https://bugzilla.redhat.com/show_bug.cgi?id=201412

    Do not delete temporary files in adjunct mode

    Fix typo in button press_press-release

    Change window initial size

    Refactor source-files structure

    Refactor code

    Update 'is_tempfile()' with png media file extension

    Refactor options handling code

    Improve logging code

    Changes in temporary directory code

    Fix compiler warnings

    Update build system to Autotools
      - remove makedepend
      - configure-time option to disable the display window
      - link against GTK libraries only if we need them
      - make endian test more portable
      - more portable sleep function
      - other minor changes

    Switch from CVS to git

0.1.6+cvs20040426

PNG support

Driftnet now uses GTK2, rather than GTK1.

Added support for reading packets from a pcap dump file (thanks to Rob Timko
and Joshua Wright for this); and for extracting URLs from HTTP requests (not
yet exposed in the user interface).

Driftnet will now discard connections after 8Mb of data has been transferred.

Fixed adjunct mode so that stdout is line-buffered, following a suggestion by
Jonas Jensen.

0.1.6

Changed the algorithm used to search for image start blocks to Boyer-Moore, for
a performance improvement. Fixed some build errors.

0.1.5

Allow user to save images by clicking on them.

Driftnet now exits more cleanly on interrupt. Various minor bug fixes,
including an endianness problem in the display code.

The temporary directory used by driftnet may now be specified as a command-line
option; otherwise, it is created dynamically.
