@@ -184,12 +184,12 @@ static void mpeg_player_manager(void) {
             case 0:
                 execl("/bin/sh", "/bin/sh", "-c", audio_mpeg_player, NULL);
                 log_msg(LOG_ERROR, "exec: %s", strerror(errno));
-                exit(-1);
+                unexpected_exit(-1);
                 break;
 
             case -1:
                 log_msg(LOG_ERROR, "fork: %s", strerror(errno));
-                exit(-1);  /* gah, not much we can do now. */
+                unexpected_exit(-1);  /* gah, not much we can do now. */
                 break;
 
             default:
@@ -237,7 +237,7 @@ void do_mpeg_player(void) {
         close(pp[1]);
         dup2(pp[0], 0); /* make pipe our standard input */
         mpeg_player_manager();
-        exit(-1);
+        unexpected_exit(-1);
     } else {
         close(pp[0]);
         mpeg_fd = pp[1];
