@@ -1,0 +1,17 @@
+/*
+ * pid.h
+ *
+ * Handles the pid file on adjunct mode
+ *
+ * Copyright (c) 2013 David Suárez.
+ * Email: david.sephirot@gmail.com
+ *
+ */
+
+#ifndef __PID_H__
+#define __PID_H__
+
+void create_pifile();
+void close_pifile();
+
+#endif /* __PID_H__ */
