@@ -2,6 +2,8 @@ Changelog for driftnet
 
 1.0.1
 
+	Create pidfile
+
     Add radiotap and 802.11 headers support
 
 1.0
